After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729334 - [review] dcbw/fixes: misc fixes for applet startup
[review] dcbw/fixes: misc fixes for applet startup
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: nm-applet
unspecified
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-05-01 14:58 UTC by Dan Williams
Modified: 2014-05-06 19:14 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Dan Williams 2014-05-01 14:58:32 UTC
Fix --shell-debug not creating a secret agent.

Fix hanging on startup when initializing ModemManager takes a while.
Comment 1 Thomas Haller 2014-05-02 18:05:19 UTC
Both commits look good to me.


Just wondering, that changing applet->mm1_running (in mm1_name_owner_changed_cb()) does not raise any event/notification... is that correct?
Comment 2 Dan Williams 2014-05-05 20:56:14 UTC
It actually doesn't need to raise any notification because the applet menu is not dynamic at all, instead it's ccompletely rebuilt every time the applet is clicked.  So nothing really cares about the signal changing; if the value changes to TRUE then the next time the menu is shown the Modem devices will appear in the menu.
Comment 3 Dan Winship 2014-05-06 14:15:30 UTC
the get_device_class_from_connection() change in the second patch doesn't seem to go with any of the things mentioned in the commit message?
Comment 4 Dan Williams 2014-05-06 16:56:19 UTC
(In reply to comment #3)
> the get_device_class_from_connection() change in the second patch doesn't seem
> to go with any of the things mentioned in the commit message?

You're right, removed that hunk.  How about now?
Comment 5 Dan Winship 2014-05-06 18:22:23 UTC
yes, looks good other than that
Comment 6 Dan Williams 2014-05-06 19:14:31 UTC
Merged to master.