applet: create agent if --shell-debug is used (bgo #729334)

The applet agent wouldn't be created if --shell-debug was used, which
somewhat defeats the purpose of --shell-debug (which is to act like
nm-applet isn't running under gnome-shell for debugging purposes).

https://bugzilla.gnome.org/show_bug.cgi?id=729334